fix button spacing (from top and sides)

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -51,6 +51,12 @@ html, body {
   }
 }
 #content {
+  .btn {
+    margin-top: 40px;
+    &.btn-view, &.btn-edit {
+      margin-right: 20px;
+    }
+  }
   p {
     margin-bottom: 1em;
   }
